tests/neg/i12591/Outer.scala
package outer
export inner.Foo
export Foo.Bar
